--- a/SWGA/package.json
+++ b/SWGA/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "@antv/g2plot": "^2.4.32",
+    "@chakra-ui/react": "^3.6.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.64.1",
@@ -31,6 +34,7 @@
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.0.6",
     "html-react-parser": "^5.2.2",
     "html-to-draftjs": "^1.5.0",
     "install": "^0.13.0",
@@ -51,7 +55,6 @@
     "react-select": "^5.9.0",
     "recharts": "^2.15.0",
     "rsuite": "^5.76.3",
-    "sass": "^1.83.3",
     "styled-components": "^6.1.14",
     "use-debounce": "^10.0.4",
     "web-vitals": "^4.2.4",
@@ -67,6 +70,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
+    "vite": "^6.0.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
