--- a/SWGA/package.json
+++ b/SWGA/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
@@ -47,7 +48,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-google-button": "^0.8.0",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-input-verification-code": "^1.0.2",
     "react-router-dom": "^7.1.1",
@@ -58,7 +59,8 @@
     "styled-components": "^6.1.14",
     "use-debounce": "^10.0.4",
     "web-vitals": "^4.2.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
