--- a/SWGA/package.json
+++ b/SWGA/package.json
@@ -40,6 +40,7 @@
     "html-react-parser": "^5.2.2",
     "html-to-draftjs": "^1.5.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
