--- a/SWGA/vercel.json
+++ b/SWGA/vercel.json
@@ -5,6 +5,12 @@
         "use": "@vercel/static-build",
         "config": { "distDir": "dist" }
       }
-    ]
+    ],
+    "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
   }
   
