--- a/SWGA/package.json
+++ b/SWGA/package.json
@@ -46,6 +46,8 @@
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.3.0",
     "react-datetime": "^3.3.1",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
